# MDMC

./: .gitignore  README.md
src/: CMakeLists.txt  SConscript  SConstruct  common_block.f90  common_potential_block.f90  configuration.f90  control_containers.f90  converters.f90  fnc_constraint.f90  fnc_constraint_reader.f90  fom_readers.f90  func_param.f90  func_params_wrapper.f90  function.f90  g_d_readers.f90  gpe.f90  handler.f90  handler_structure_part.f90  histogram.f90  histogram_cutdown.f90  how-to-build.txt  lennard_jones.f90  makefile  mc_control.f90  md_control.f90  md_control_time_corr.f90  md_gridsearch_control.f90  md_properties.f90  mdmc.f90  mdmc.sln  mdmc.vfproj  mdmc_control.f90  mdmc_control_time_corr.f90  moldyn_control.f90  near_neighb.f90  pe_containers.f90  phasespace.f90  rdf.f90  rdf_fom.f90  s_q_omega.f90  (+16 more)
src/algorithms/: mc_control.f90  md_control.f90  md_control_time_corr.f90  md_gridsearch_control.doc  md_gridsearch_control.f90  mdmc_control.f90  mdmc_control_time_corr.f90
src/for_debugging/: matlab_cal_s_q_time.m
src/functions/: g_d_rt_fom.f90  lennard_jones.f90  rdf_fom.f90  s_q_omega_fom.f90  s_q_time_fom.f90
src/input/: example_fnc_constraint.xml  example_structure.xml  md_control.xml  md_control_argon.xml  md_control_rapaport_test.xml  md_control_time_corr.xml  md_control_time_corr_argon.xml  md_gridsearch_control.xml  mdmc_control.xml  mdmc_control_argon.xml  mdmc_control_time_corr.xml  mdmc_control_time_corr_argon.xml  test.xml
src/output/: analyseMDMCcombined.m  analyseMDMCcorrelation.m  analyseMDMCcorrelation.py  analyseMDMCrun.m  analyseMDMCrun.py  diff_s_q_omega.m  diff_s_q_omega.py  g_d_data_fcc_500atomsAve100r15AA.xml  g_d_data_fcc_864atomsAve100r18AA.xml  integrate_over_r.m  matlab_cal_s_q_omega.m  matlab_cal_s_q_time.m  plot_many_rdf.m  plot_many_rdf.py  read_G_d.m  read_G_d.py  read_G_s.m  read_G_s.py  read_einstein_diffuse_exp.m  read_einstein_diffuse_exp.py  read_h_d.m  read_h_d.py  read_h_s.m  read_h_s.py  read_rdf.m  read_rdf.py  read_s_q_omega.m  read_s_q_omega.py  read_s_q_time.m  read_s_q_time.py
src/output/movie/: make_movie.m
src/readers/: alloc_q_omega_arrays.f90  fnc_constraint_reader.f90  g_d_readers.f90  s_qo_reader.f90  s_qt_reader.f90  structure_reader.f90
src/unit_tests/revision77/: rdf3.xml  test.xml
(+87 files in other folders)
